force-app/main/default/objects/MarketEvent_PE__e/MarketEvent_PE__e.object-meta.xml
<CustomObject>
    <label>MarketEvent_PE</label>
    <pluralLabel>MarketEvent_PEs</pluralLabel>
</CustomObject>