force-app/main/default/objects/MarketEvent_PE__e/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>ConfidenceScore</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>