force-app/main/default/objects/MarketEvent_PE__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>