force-app/main/default/objects/MarketEvent_PE__e/fields/ProcessedFlag__c.field-meta.xml
<CustomField>
    <fullName>ProcessedFlag__c</fullName>
    <label>ProcessedFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>